# CPDLog

./: .flake8  .gitignore  LICENSE  README.md  config.py  cpd_rules.py  ea_format.py  example.xlsx  pyproject.toml  requirements.txt  run-webapp.bat  run-webapp.sh  run.py
.github/workflows/: pytest.yml
cpdlog/: __init__.py  __main__.py  activity.py  cli.py  cpd_rules.py  cpd_rules.toml  export_csv.py  forms.py  import_csv.py  logfile.py  migrate_ea.py  model.py  report.py  summary.py  views.py
cpdlog/templates/: activities.html  activity_form.html  activity_new.html  importcsv.html  importea.html  index.html  layout.html  summary.html
examples/: cpdlog.csv
templates/: cpd_summary.html
tests/: test_activity.py  test_cli.py  test_web.py
