[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cpdlog"
authors = [{ name = "Alex Guinman", email = "alex@guinman.id.au" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["CPD"]
requires-python = ">=3.10"
dynamic = ["version", "description"]
dependencies = [
    "typer",
    "cheroot",
    "pydantic",
    "plotly==5.24.1",
    "pandas",
    "flask",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Source = "https://github.com/aguinane/CPDLog/"

[project.scripts]
cpdlog = "cpdlog.cli:app"

[tool.pytest.ini_options]
addopts = "-ra --failed-first --showlocals --durations=3 --cov=cpdlog"

[tool.coverage.run]
omit = ["*/version.py", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 85

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "N", "PERF", "RUF", "SIM", "UP"]
